# quant-api-gateway

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  strategies.json
docs/: PROJECT.md  index.md
docs/architecture/: system-overview.md
docs/getting-started/: quickstart.md
docs/plans/: ROADMAP.md
docs/plans/feature-strategies-report-metrics/: PLAN-followup-strategy-type-field.md  PLAN.md
docs/plans/phase_1_bootstrap/: phase_1_bootstrap.md
docs/plans/phase_2_data_models/: phase_2_data_models.md
docs/plans/phase_3_strategy_ingestion/: phase_3_strategy_ingestion.md
docs/plans/phase_4_aggregation_engine/: phase_4_aggregation_engine.md
docs/plans/phase_5_redis_caching/: phase_5_redis_caching.md
docs/plans/phase_6_rest_api_endpoints/: phase_6_rest_api_endpoints.md
docs/plans/phase_7_operations_quality_gate/: phase_7_operations_quality_gate.md
docs/reference/: portfolio.md
docs/reference/api/: endpoints.md
docs/reference/config/: settings.md
docs/reference/services/: aggregator.md
src/: config.py  logging_config.py  main.py
src/api/v1/: admin.py  dependencies.py  (+6 more)
src/db/: csm_set_postgres.py  mongo.py  postgres.py  redis_client.py
src/engines/: __init__.py  portfolio.py  registry.py
src/schemas/: errors.py  gateway.py  registry.py  strategy.py  strategy_report.py
src/services/: __init__.py  aggregator.py  cache.py  cache_invalidator.py  errors.py  ingestion.py  performance.py  portfolio.py  snapshot_writer.py  strategy_registry.py  strategy_report_service.py
src/utils/: formatting.py
tests/: conftest.py  strategies.fixture.json  test_config.py  test_main.py
tests/db/: test_db_connect.py
tests/integration/: conftest.py  test_end_to_end.py  test_strategy_report_roundtrip.py
tests/schemas/: test_gateway.py  test_registry.py  test_strategy.py  test_strategy_report.py
tests/services/: test_aggregator.py  test_cache.py  test_cache_invalidator.py  test_ingestion.py  test_snapshot_writer.py  test_strategy_registry.py  test_strategy_report_service.py
(+20 files in other folders)
